--- a/client/index.html
+++ b/client/index.html
@@ -30,8 +30,10 @@
     <meta name="twitter:description" content="Quality plumbing materials - PPR pipes, GI fittings, toilets & accessories in Rongai, Nairobi" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="apple-touch-icon" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/icon-192.svg" />
+    <link rel="icon" sizes="192x192" href="/icon-192.svg" />
+    <link rel="manifest" href="/manifest.json" />
     
     <!-- Preconnect to external domains -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
