added site-map and robots.txt

--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,9 @@
     <link rel="icon" sizes="192x192" href="/icon-192.svg" />
     <link rel="manifest" href="/manifest.json" />
     
+    <!-- Sitemap for SEO -->
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+    
     <!-- Preconnect to external domains -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
